<resources>
    <string name="app_name">Les Pel•lícules</string>


    <string name="moview">Movies</string>

    <string name="search_box_title">Place your search</string>
    <string name="search_switch_popular">Popular movies</string>
    <string name="search_switch_topRated">Top Rated movies</string>
    <string name="search_switch_nowPlaying">Now Playing movies</string>
    <string name="search_switch_latest">Latest movies</string>
    <string name="search_switch_upcoming">Upcoming movies</string>
    <string name="search_switch_favourites">Favourites movies</string>

    <string name="trailers">Trailes</string>
    <string name="reviews">Reviews</string>

    <string name="content_authority" translatable="false">cat.jorda.xavier.lespelicules.app</string>
    <string name="no_data_available">No information available."</string>>

</resources>
