<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#3E80B4"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/search_box_title"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/radio_group">

        <RadioButton
                android:text="@string/search_switch_popular"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/popular_type"
                android:layout_weight="1" />

        <RadioButton
                android:text="@string/search_switch_topRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/topRated_type"
                android:layout_weight="1" />

        <RadioButton
                android:text="@string/search_switch_nowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nowPlaying_type"
                android:layout_weight="1" />

        <RadioButton
                android:text="@string/search_switch_latest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/latest_type"
                android:layout_weight="1" />

        <RadioButton
                android:text="@string/search_switch_upcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/upcoming_type"
                android:layout_weight="1" />
    </RadioGroup>


</LinearLayout>